--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.loogen.wanandroid">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -11,8 +12,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.MainActivity"></activity>
+        android:theme="@style/AppTheme"
+        android:allowBackup="false"
+        tools:ignore="AllowBackup">
+        <activity android:name=".ui.activity.MainActivity" />
         <activity
             android:name=".ui.activity.StartupActivity"
             android:theme="@style/FullScreen">
@@ -22,8 +25,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.LoginActivity"></activity>
-        <activity android:name=".ui.activity.TestActivity"></activity>
+        <activity android:name=".ui.activity.AccountActivity" />
+        <activity android:name=".ui.activity.TestActivity" />
     </application>
 
 </manifest>
