--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,8 @@ android {
     }
 
 
-
-
-    dataBinding {
-        enabled true
+    buildFeatures {
+        dataBinding true
     }
 
 
@@ -42,11 +40,11 @@ dependencies {
 
 
     //test frame
-    testImplementation 'junit:junit:4.13'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    //ui
+    //android ui
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.material:material:1.2.1'
@@ -57,7 +55,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata:2.3.0-rc01'
 
     //rx component
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.18'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
     //http
@@ -66,7 +64,17 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.14.1'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
 
-    //nav
+    //navigation
     implementation 'androidx.navigation:navigation-fragment:2.3.2'
     implementation 'androidx.navigation:navigation-ui:2.3.2'
+
+    //recyclerview adapter
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.6'
+
+    //refresh and load
+    def smart_refresh = "2.0.3"
+    implementation  'com.scwang.smart:refresh-layout-kernel:'+smart_refresh
+    implementation  'com.scwang.smart:refresh-header-material:'+smart_refresh
+    implementation  'com.scwang.smart:refresh-footer-classics:'+smart_refresh
+
 }
